--- a/cuento.html
+++ b/cuento.html
@@ -1367,7 +1367,7 @@ $(document).ready(function() {
 				Su navegador no soporta audio HTML5.
 			</video>-->
             
-            <audio controls="true" style="width:400px; margin:20px auto 0px auto;" id="playerCuento">
+            <audio autoplay="autoplay" controls="controls" style="width:400px; margin:20px auto 0px auto;" id="playerCuento">
 				Su navegador no soporta audio HTML5.
 			</audio>
             
