--- a/cuento.html
+++ b/cuento.html
@@ -1375,6 +1375,7 @@ $(document).ready(function() {
 						
 						case '01'://principe feliz
 							$("#playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg" type="audio/ogg" />');
+							alert('789');
 						break;
 							
 						case '02'://la bella y la bestia
