--- a/cuento.html
+++ b/cuento.html
@@ -564,6 +564,9 @@ $(document).ready(function() {
 							//iOS y Safari no reconocen .ogg
 							alert('852');
 							
+							//$("#playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.ogg" type="audio/ogg" />');
+							$("#playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.mp3" type="audio/mp3" />');
+							
 							if(isiPhone > -1) {
 								$("#playerCuento").append('<source src="audio/cuentos_ninos/LA_UNION.mp3" type="audio/mp3" />');
 							}
