--- a/cuento.html
+++ b/cuento.html
@@ -562,9 +562,10 @@ $(document).ready(function() {
 						
 						case '07'://La union
 							//iOS y Safari no reconocen .ogg
-							alert('321');
-							$("#playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.mp3" type="audio/mp3" />');
-							$("#playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.ogg" type="audio/ogg" />');
+							alert('357');
+							//$("#playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.mp3" type="audio/mp3" />');
+							//$("#playerCuento").append('<source src="http://librosparatodoscr.com/apps/valores/audio/cuentos_ninos/LA_UNION.ogg" type="audio/ogg" />');
+							$("#playerCuento").append('<source src="audio/cuentos_ninos/LA_UNION.ogg" type="audio/ogg" />');
 						break;
 						
 						case '08'://La aventura de la perrita Luna
