--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ $(document).ready(function() {
 				&bull;
 				<strong>Edici&oacute;n gr&aacute;fica y dise&ntilde;o</strong> Laura V&aacute;zques Alvarado
 				&bull;
-				<strong>Ilustraciones</strong> Mar&iacute;a Z&uacute;&ntilde;iga Mena / Andr&eacute;s esteban S&aacute;nchez Barboza, twohappycards@gmail.com
+				<strong>Ilustraciones</strong> Mar&iacute;a Z&uacute;&ntilde;iga Mena / Andr&eacute;s Esteban S&aacute;nchez Barboza, twohappycards@gmail.com
                 &bull;
                 <strong>Locuci&oacute;n</strong> Lolita Aguilar Conejo
                 &bull;
